# GB-CGCNN

./: .gitignore  LICENSE  README.md  data.py  main.py  pyproject.toml  train.py  utils.py
configs/: config.yaml
models/: cgcnn.py  ensembles.py
